# Triton

./: .gitattributes  .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CI_CD_IMPLEMENTATION.md  CODEGEN_IMPLEMENTATION.md  COMPILER_DRIVER_IMPLEMENTATION.md  CONTRIBUTING.md  EXAMPLES_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CIFAR10.md  IMPLEMENTATION_EXPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LAUNCH_GUIDE.md  LAUNCH_NOW.md  LAUNCH_STATUS.txt  MANIFEST.in  MIGRATION.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  READY_TO_LAUNCH.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  REVIEW_INDEX.md  REVIEW_SUMMARY.txt  SECURITY_IMPLEMENTATION.md  START_HERE.md  TRAINING_SUMMARY.txt  check_training_ready.py  conftest.py  demo_compiler.py  demo_launch.sh  demo_optimization.py  launch_training.sh  minimal_test.py  minimal_test.tri  pyproject.toml  requirements-dev.txt  requirements-examples.txt  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_CHECKLIST.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml  security.yml
backend/pytorch/: README.md  __init__.py  codegen.py  ternary_models.py  ternary_tensor.py
backend/pytorch/export/: __init__.py  github_publisher.py  huggingface_hub.py  onnx_exporter.py
backend/pytorch/ops/: __init__.py  activations.py  pack.py  quantize.py
backend/pytorch/templates/: module.py.jinja
backend/triton_gpu/: __init__.py  gpu_optimizer.py
checkpoints/: credit_risk_best.pth  tokenizer.json
compiler/: __init__.py  cache.py  driver.py  optimizer.py  parallel.py  profiler.py
compiler/ast/: nodes.py
compiler/lexer/: triton_lexer.py
compiler/parser/: parser.out  parsetab.py  triton_parser.py
compiler/typechecker/: README.md  __init__.py  type_checker.py  validator.py
data/: risk_training.jsonl  risk_training_v2.jsonl
docs/: CIFAR10_TRAINING_GUIDE.md  CI_CD_GUIDE.md  CI_CD_QUICK_REF.md  CODEGEN_GUIDE.md  COMPILER_DRIVER.md  COMPILER_OPTIMIZATION.md  COMPILER_QUICK_REFERENCE.md  EXPORT_GUIDE.md  OPTIMIZATION_GUIDE.md  PROFILING.md  QUICKSTART_PYTORCH_BACKEND.md  QUICK_REFERENCE.md  QUICK_START_CIFAR10.md  SECURITY_WORKFLOW.md  TYPE_CHECKER_SUMMARY.md  getting_started.md
docs/api/: README.md  backend.md  compiler.md  examples.md  kernels.md
docs/architecture/: README.md  code_generator.md  compiler_pipeline.md  extension_points.md  optimization_passes.md  type_checker.md
docs/benchmarks/: README.md  compilation_speed.md  model_zoo.md  performance.md  quantization_accuracy.md
docs/contributing/: README.md  code_style.md  development_setup.md  pr_process.md  testing.md
docs/dsl/: README.md  builtin_functions.md  language_spec.md  quantization_primitives.md  syntax_guide.md  type_system.md
docs/source/: conf.py  index.rst
docs/tutorials/: 01_basic_model.md  02_quantization.md  03_custom_layers.md  04_training.md  05_deployment.md  06_advanced_features.md
examples/: README.md  README.md.old  __init__.py  cifar10_training_examples.sh  codegen_example.py  export_and_publish_example.py  mnist_ternary.py  requirements-examples.txt  test_mnist_ternary.py  type_checker_usage.py
examples/basic/: README.md  mobilenetv2.triton  resnet18.triton  simple_mlp.triton  vision_transformer.triton
examples/custom/: README.md  attention_mechanism.triton  custom_conv.triton  custom_quantization.triton
examples/deployment/: .gitattributes  DEPLOYMENT_SUMMARY.md  INSTALLATION.md  README.md  export_onnx.py  huggingface_hub.py  optimize_for_mobile.py  verify_deployment.sh
examples/notebooks/: 01_introduction.ipynb  02_quantization_tutorial.ipynb  03_performance_analysis.ipynb  README.md
examples/quantization/: README.md  int8_mobilenet.triton  mixed_precision.triton  qat_training.py  ternary_resnet.triton
examples/training/: README.md  quantization_aware_training.py  train_cifar10.py  train_imagenet.py  transfer_learning.py
kernels/cuda/: PACKING_SPEC.md  README.md  ternary_matmul.cu  ternary_ops.py
kernels/triton/: README.md  __init__.py  benchmark_triton_vs_cuda.py  integration_demo.py  ternary_ops.py  ternary_packing.py  test_cpu_validation.py  test_ternary_ops.py
models/: README.md  model_zoo.py
models/benchmarks/: accuracy_benchmark.py
models/credit_risk/: __init__.py  memo_composer.py  ternary_credit_risk.py
models/mobilenetv2/: ternary_mobilenetv2.py
models/resnet18/: ternary_resnet18.py
models/scripts/: README.md  benchmark_ternary_models.py  generate_risk_data.py  infer_credit_risk.py  package_ternary_models.py  publish_model.py  train_credit_risk.py  train_ternary_models.py
scripts/: release.py  validate_ci.sh
tests/: run_simple_tests.py  test_ternary_matmul.py  validate_cifar10_training.py
tests/benchmarks/: README.md  __init__.py  bench_codegen.py  bench_inference.py  bench_matmul.py  bench_memory.py  run_all_benchmarks.py  test_compilation_performance.py
tests/fuzzing/: test_fuzzing.py
tests/integration/: README.md  conftest.py  test_adapters.py  test_codegen.py  test_custom_model_compilation.py  test_error_handling.py  test_export_pipeline.py  test_mobilenet_compilation.py  test_performance_benchmarks.py  test_quantization_pipeline.py  test_resnet18_compilation.py  test_ternary_quantization_e2e.py  test_training_integration.py  test_utils.py
tests/performance/: test_performance.py
tests/property/: test_property.py
tests/security/: test_security.py
tests/stress/: RESULTS.md  test_parser_stress.py  test_stress.py
tests/unit/: README_TRITON_TESTS.md  test_cifar10_training.py  test_codegen_comprehensive.py  test_credit_risk.py  test_driver.py  test_export.py  test_gpu_optimizer.py  test_lexer.py  test_lexer_comprehensive.py  test_memo_composer.py  test_nodes.py  test_pack.py  test_parser.py  test_quantize.py  test_release.py  test_triton_backend_comprehensive.py  test_type_checker_comprehensive.py  test_typechecker.py
tests/validation/: validate_codegen_output.py
triton/: __init__.py
triton/compiler/: __init__.py  codegen.py  driver.py
(+13 files in other folders)
