[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-dsl"
version = "0.1.0"
description = "Domain-Specific Language for Ternary Neural Networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Finance Commander", email = "dev@financecommander.com"}
]
keywords = ["machine-learning", "neural-networks", "quantization", "dsl", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "ply>=3.11",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
# Development dependencies (testing, linting, documentation)
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    # Linting and formatting
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "ruff>=0.1.0",
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    # Development tools
    "ipython>=8.18.0",
    "jupyterlab>=4.0.0",
    "jupyter>=1.0.0",
    # Type stubs
    "types-setuptools>=69.0.0",
]

# GPU support (CUDA, Triton)
gpu = [
    "cuda-python>=12.0.0",
    "triton>=2.1.0",
]

# Examples and demos
examples = [
    "torchvision>=0.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
]

# Model export (ONNX, HuggingFace Hub, GitHub)
export = [
    "onnx>=1.17.0",
    "onnxruntime>=1.15.0",
    "huggingface-hub>=0.19.0",
    "PyGithub>=2.1.0",
]

# Complete installation (all optional dependencies)
# NOTE: This group must be manually updated when other groups change
# to maintain synchronization. Each dependency should be listed once.
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "ruff>=0.1.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "ipython>=8.18.0",
    "jupyterlab>=4.0.0",
    "jupyter>=1.0.0",
    "types-setuptools>=69.0.0",
    "cuda-python>=12.0.0",
    "triton>=2.1.0",
    "torchvision>=0.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.15.0",
    "huggingface-hub>=0.19.0",
    "PyGithub>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/financecommander/Triton"
Documentation = "https://github.com/financecommander/Triton/docs"
Repository = "https://github.com/financecommander/Triton"
Issues = "https://github.com/financecommander/Triton/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["compiler*", "backend*", "kernels*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
